// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Session pages renders correctly for Customer Login page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="session_page main_content"
      >
        <h2
          class="h2_login"
        >
          Login
        </h2>
        <form>
          <label
            for="email"
          >
            Email:
            <br />
            <input
              id="email"
              name="email"
              type="email"
              value=""
            />
          </label>
          <br />
          <label
            for="password"
          >
            Password:
            <br />
            <input
              id="password"
              name="password"
              type="password"
              value=""
            />
          </label>
          <br />
          <button
            class="splash_link login_btn"
            type="submit"
          >
            Login
          </button>
          <a
            class="splash_link"
            href="/CustomerRegister"
          >
            Register
          </a>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="session_page main_content"
    >
      <h2
        class="h2_login"
      >
        Login
      </h2>
      <form>
        <label
          for="email"
        >
          Email:
          <br />
          <input
            id="email"
            name="email"
            type="email"
            value=""
          />
        </label>
        <br />
        <label
          for="password"
        >
          Password:
          <br />
          <input
            id="password"
            name="password"
            type="password"
            value=""
          />
        </label>
        <br />
        <button
          class="splash_link login_btn"
          type="submit"
        >
          Login
        </button>
        <a
          class="splash_link"
          href="/CustomerRegister"
        >
          Register
        </a>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Session pages renders correctly for Customer Registration page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="session_page main_content"
      >
        <h2>
          Register
        </h2>
        <form>
          <label
            for="name"
          >
            Name:
            <br />
            <input
              id="name"
              name="name"
              type="text"
              value=""
            />
          </label>
          <br />
          <label
            for="email"
          >
            Email:
            <br />
            <input
              id="email"
              name="email"
              type="email"
              value=""
            />
          </label>
          <br />
          <label
            for="password"
          >
            Password:
            <br />
            <input
              id="password"
              name="password"
              type="password"
              value=""
            />
          </label>
          <br />
          <label
            for="confirm_password"
          >
            Confirm Password:
            <br />
            <input
              id="confirm_password"
              name="password_confirmation"
              type="password"
              value=""
            />
          </label>
          <br />
          <div
            class="reg_btns"
          >
            <button
              class="splash_link login_btn"
              type="submit"
            >
              Register
            </button>
            <a
              class="splash_link"
              href="/CustomerLogin"
            >
              Login
            </a>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="session_page main_content"
    >
      <h2>
        Register
      </h2>
      <form>
        <label
          for="name"
        >
          Name:
          <br />
          <input
            id="name"
            name="name"
            type="text"
            value=""
          />
        </label>
        <br />
        <label
          for="email"
        >
          Email:
          <br />
          <input
            id="email"
            name="email"
            type="email"
            value=""
          />
        </label>
        <br />
        <label
          for="password"
        >
          Password:
          <br />
          <input
            id="password"
            name="password"
            type="password"
            value=""
          />
        </label>
        <br />
        <label
          for="confirm_password"
        >
          Confirm Password:
          <br />
          <input
            id="confirm_password"
            name="password_confirmation"
            type="password"
            value=""
          />
        </label>
        <br />
        <div
          class="reg_btns"
        >
          <button
            class="splash_link login_btn"
            type="submit"
          >
            Register
          </button>
          <a
            class="splash_link"
            href="/CustomerLogin"
          >
            Login
          </a>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Session pages renders correctly for Staff Login page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="session_page main_content"
      >
        <h1>
          Staff Login Page
        </h1>
        <form>
          <input
            id="staffID"
            name="staffID"
            placeholder="Enter your Staff ID"
            type="password"
            value=""
          />
          <button
            type="submit"
          >
            Login
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="session_page main_content"
    >
      <h1>
        Staff Login Page
      </h1>
      <form>
        <input
          id="staffID"
          name="staffID"
          placeholder="Enter your Staff ID"
          type="password"
          value=""
        />
        <button
          type="submit"
        >
          Login
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
